Fixed form for small screens
The iframe of the form had a minimum width.
This caused the page to break on devices with smaller screens.

To remove the scrollbar in the iframe, I had to set the height of the iframe to a greater, fixed value.
Unfortunately, the height of the iframe can't be dynamically decided based on the content of the iframe, because of "Cross domain policy".

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
+    width: 100vw;
     margin: 0;
-    display: flex;
-    flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     color: snow;
 }
@@ -42,4 +41,9 @@ body > section {
 .feedback {
     background-color: #312426;
     padding: 32px 0;
+}
+
+.feedback iframe {
+    width: 100%;
+    min-width: 0;
 }
